--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorGray">#99FFFFFF</color>
@@ -25,5 +21,14 @@
     <color name="white_90">#E6FFFFFF</color>
     <color name="white_70">#B3FFFFFF</color>
     <color name="purple_100">#DFE6FF</color>
+
+    <color name="colorPrimaryDark">#0277BD</color>
+    <color name="colorPrimary">#039BE5</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="colorLightGray">#eee</color>
+    <color name="colorPurple">#6F0AEE</color>
+    <color name="colorDarkBlue">#0091EA</color>
+    <color name="colorLightBlue">#81D4FA</color>
+    <color name="colorYellow">#FFD700</color>
 
 </resources>
