--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,8 @@
     <dimen name="dp_5">5dp</dimen>
     <dimen name="dp_15">15dp</dimen>
     <dimen name="dp_0">0dp</dimen>
+    <dimen name="margin12">12dp</dimen>
+    <dimen name="margin4">4dp</dimen>
+    <dimen name="margin8">8dp</dimen>
+    <dimen name="btn_op_width">96dp</dimen>
 </resources>
