--- a/app/src/main/res/layout/activity_mvi_sample.xml
+++ b/app/src/main/res/layout/activity_mvi_sample.xml
@@ -3,20 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/C_FFFFFF"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    android:background="@color/C_FFFFFF">
 
     <LinearLayout
-        android:id="@+id/llTitle"
+        android:id="@+id/layoutTitle"
         android:layout_width="0dp"
         android:layout_height="44dp"
         android:layout_marginTop="32dp"
         android:gravity="center_vertical"
         android:layout_marginHorizontal="16dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:id="@+id/tvBack"
@@ -31,76 +30,79 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="筛选 · 3"
+            android:text="MVI 列表示例"
             android:textColor="@color/C_222222"
             style="@style/style_text_bold_18"/>
 
         <TextView
-            android:id="@+id/tvClear"
+            android:id="@+id/tvRefresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="清空"
+            android:text="刷新"
             android:textColor="@color/C_222222"
             style="@style/style_text_normal_16"/>
 
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvSelected"
+    <TextView
+        android:id="@+id/tvTop"
         android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginHorizontal="12dp"
-        android:paddingVertical="12dp"
-        android:visibility="gone"
-        android:orientation="horizontal"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:text="局部刷新文案"
+        android:textColor="@color/C_FFFFFF"
+        android:background="@color/C_P3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/llTitle"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_linkage_selected"
-        tools:visibility="visible"/>
+        app:layout_constraintTop_toBottomOf="@id/layoutTitle"/>
 
-    <View
-        android:id="@+id/view_divide"
-        android:layout_width="0dp"
-        android:layout_height="0.5dp"
-        android:background="@color/C_EEEEEE"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rvSelected"/>
-
-    <com.zhaopin.common.widget.linkage.LinkageRecyclerView
-        android:id="@+id/rvLinkage"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefresh"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/C_F7F8FA"
+        app:layout_constraintTop_toBottomOf="@id/tvTop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view_divide"
-        app:layout_constraintBottom_toTopOf="@id/tvSubmit"/>
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_mvi_sample" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <FrameLayout
-        android:id="@+id/iv_mask"
+        android:id="@+id/layoutEmpty"
         android:layout_width="0dp"
-        android:layout_height="38dp"
+        android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/tvSubmit"/>
-
-    <TextView
-        android:id="@+id/tvSubmit"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="64dp"
-        android:layout_marginBottom="16dp"
-        android:paddingVertical="14dp"
-        android:text="确定"
-        android:gravity="center"
-        style="@style/style_text_bold_16"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:background="@color/C_666666"/>
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            style="@style/style_text_bold_18"
+            android:textColor="@color/C_P1"
+            android:text="糟糕，信号被三体人劫持了～"/>
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
