--- a/app/src/main/res/layout/item_linkage_primary.xml
+++ b/app/src/main/res/layout/item_linkage_primary.xml
@@ -2,17 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/llPrimaryRoot"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="56dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center_vertical"
-    android:paddingVertical="16dp"
-    tools:layout_width="120dp">
+    tools:layout_width="88dp">
 
     <View
         android:id="@+id/tvPrimaryDivide"
         android:layout_width="3dp"
         android:layout_height="20dp"
-        android:visibility="gone"
+        android:visibility="invisible"
         android:background="@color/C_5B7BE9" />
 
     <TextView
