--- a/app/src/main/res/layout/item_linkage_secondary_footer.xml
+++ b/app/src/main/res/layout/item_linkage_secondary_footer.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/C_FFFFFF">
 
     <Space
         android:layout_width="match_parent"
