feat: some update

--- a/app/src/main/res/layout/item_mvi_sample.xml
+++ b/app/src/main/res/layout/item_mvi_sample.xml
@@ -17,7 +17,7 @@
         android:paddingVertical="8dp"
         app:layout_radius="8dp">
 
-        <TextView
+        <com.example.kotlindemo.widget.BrightTextView
             android:id="@+id/tvContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
