--- a/app/src/main/res/layout/position_recommend_opt_tag.xml
+++ b/app/src/main/res/layout/position_recommend_opt_tag.xml
@@ -2,12 +2,14 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="28dp"
-    android:paddingHorizontal="8dp"
+    android:layout_height="wrap_content"
+    android:paddingVertical="7dp"
+    android:paddingHorizontal="12dp"
     android:layout_marginEnd="8dp"
+    android:layout_marginBottom="8dp"
     android:singleLine="true"
     android:gravity="center"
     tools:text="医药制造"
-    android:background="@color/C_B7"
-    android:textColor="#606578"
-    android:textSize="12sp" />
+    android:background="@drawable/recommend_opt_tag_bg_selector"
+    android:textColor="@color/enterprise_tag_text_selector"
+    android:textSize="13sp" />
