--- a/app/src/main/res/drawable/recommend_opt_tag_bg_selector.xml
+++ b/app/src/main/res/drawable/recommend_opt_tag_bg_selector.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/C_P5" />
+            <solid android:color="@color/C_FFFFFF" />
             <corners android:radius="6dp" />
             <stroke android:color="@color/C_P1" android:width="1dp"/>
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#F5F7FA" />
+            <solid android:color="@color/C_FFFFFF" />
             <corners android:radius="6dp" />
         </shape>
     </item>
