--- a/app/src/main/res/layout/b_home_item_keyword_tag_img.xml
+++ b/app/src/main/res/layout/b_home_item_keyword_tag_img.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="28dp"
+    android:layout_height="28dp"
     android:paddingHorizontal="7dp"
-    android:paddingVertical="8.5dp"
+    android:paddingVertical="7dp"
     android:layout_marginEnd="8dp"
     android:singleLine="true"
     android:src="@drawable/resume_recommend_ellipsis"
