--- a/app/src/main/res/layout/activity_linage_page.xml
+++ b/app/src/main/res/layout/activity_linage_page.xml
@@ -49,8 +49,10 @@
         android:id="@+id/rvSelected"
         android:layout_width="0dp"
         android:layout_height="56dp"
-        android:layout_marginHorizontal="12dp"
+        android:paddingStart="12dp"
+        android:paddingEnd="4dp"
         android:paddingVertical="12dp"
+        android:clipToPadding="false"
         android:visibility="gone"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
