--- a/app/src/main/res/layout/layout_resume_filed_info.xml
+++ b/app/src/main/res/layout/layout_resume_filed_info.xml
@@ -13,6 +13,8 @@
         android:includeFontPadding="false"
         android:textSize="12sp"
         android:textColor="#555C70"
+        android:maxLines="1"
+        android:ellipsize="end"
         tools:text="5-10万"/>
 
     <View
