--- a/app/src/main/res/layout/my_content_recommend_detail_dialog.xml
+++ b/app/src/main/res/layout/my_content_recommend_detail_dialog.xml
@@ -18,6 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <ImageView
+        android:id="@+id/iv_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
