--- a/app/src/main/res/drawable/recommend_opt_tag_bg_selector.xml
+++ b/app/src/main/res/drawable/recommend_opt_tag_bg_selector.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/C_FFFFFF" />
+        <shape>
             <corners android:radius="6dp" />
-            <stroke android:color="@color/C_P1" android:width="1dp"/>
+            <solid android:color="@color/C_P7" />
+            <stroke android:width="1dp" android:color="@color/C_P1" />
         </shape>
     </item>
     <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@color/C_FFFFFF" />
+        <shape>
             <corners android:radius="6dp" />
+            <solid android:color="@color/C_S2" />
         </shape>
     </item>
 </selector>
